--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,17 +10,17 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: Gradle@2
+- task: Build@2
   inputs:
     workingDirectory: ''
     gradleWrapperFile: 'gradlew'
     gradleOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
+    jdkVersionOption: '1.11'
     jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
-    tasks: 'build'
+    tasks: 'build quarkusBuildDockerImage'
 - task: Docker@2
   inputs:
     containerRegistry: 'bsamartins@dockerhub'
